2005-03-17  Marco Pantaleoni  <panta@elasticworld.org>

	* src/types/string.c (string_mod): added named parametes support
	to '%' string operator.

2005-03-08  Marco Pantaleoni  <panta@elasticworld.org>

	* src/elastic_p.y: removed dependency on fprintf(). Now uses
	ec_stderr_*printf().

	* src/elastic_s.l: removed dependency on fwrite() and fprintf().
	Now uses ec_stream_write() and ec_stderr_*printf().

	* src/modules/stream_m.c (EcLibStream_Gets): Fixed EOF condition
	handling.

	* src/compile.c (compileVariable) src/ec.c src/ecc.c src/ec2c.c:
	added a 'lazy' option. When enabled allows implicit parameter
	declaration (read: you can omit variable declaration, *only* for
	package and function/method variables).

	* ...: abandoned libc stdio wherever possible and switched to
	the new stream mechanism. This allows to use esotic streams
	for elastiC input/output.

2005-03-04  Marco Pantaleoni  <panta@elasticworld.org>

	* src/elastic.c src/private.h ...: integrated patch from Anand
	Aiyer to support multiple threads with an interpreter instance per
	thread.
	Can be enabled using '--enable-threading' configure option, and
	the parent thread should call EcThreadingInit() before anything
	else.

	* src/elastic_p.y: modified to support new versions of bison
	(>1.873)

	* src/stream.c: fixed a couple of uninitialized variables.

2003-05-29  Marco Pantaleoni  <panta@elasticworld.org>

	* src/compile2c* src/ec2c.c: integrated preliminary elastiC to C
	compiler support written by Jacopo Pantaleoni
	<jp@lightflowtech.com> (my brother)

2003-04-01  Marco Pantaleoni  <panta@elasticworld.org>

	* src/interp.c (EcExecute): fixed arithmetic and, or, xor
	operations (AndOP, OrOP, XorOP). (Bug submitted by Dunhill
	Hwang).

2002-06-14  Marco Pantaleoni  <panta@elasticworld.org>

	* src/packageio.c ...: rationalized a bit package loading API
	(EcPackageLoad() has been split into EcPackageLoadByName() and
	EcPackageLoadByPath()).
