@@ -1,3 +1,9 @@
+2005-03-18  Marco Pantaleoni  <panta@elasticworld.org>
+
+	* src/ast.* src/elastic_s.l src/elastic_p.y: added new syntax
+	for hash tables. Now it's possible to write
+	{key : value, key : value ...}
+
 2005-03-17  Marco Pantaleoni  <panta@elasticworld.org>
 
 	* src/types/string.c (string_mod): added named parametes support
